tests/transpiler/x/zig/list_assign.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/list_assign.zig:6:9: error: no field or member function named 'put' in '[2]i64'
    nums.put(1, 3) catch unreachable;
    ~~~~^~~~
referenced by:
    callMain [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:637:20
    posixCallMainAndExit: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
